exports[`no-incorrect-deep-equal > invalid(1): import assert from 'node:assert';\nassert.deepEqual(1, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(1, b);

`;

exports[`no-incorrect-deep-equal > invalid(1): import assert from 'node:assert';\nassert.deepEqual(1, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(1, b);
    | ^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(1, b);

`;

exports[`no-incorrect-deep-equal > invalid(10): import assert from 'node:assert';\nassert.deepEqual(42n, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(42n, b);

`;

exports[`no-incorrect-deep-equal > invalid(10): import assert from 'node:assert';\nassert.deepEqual(42n, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(42n, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(42n, b);

`;

exports[`no-incorrect-deep-equal > invalid(11): import assert from 'node:assert';\nassert.deepEqual(a, 1); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(11): import assert from 'node:assert';\nassert.deepEqual(a, 1); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(a, 1);
    | ^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(12): import assert from 'node:assert';\nassert.deepEqual(a, \"str\"); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(a, "str");

`;

exports[`no-incorrect-deep-equal > invalid(12): import assert from 'node:assert';\nassert.deepEqual(a, \"str\"); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(a, "str");
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(a, "str");

`;

exports[`no-incorrect-deep-equal > invalid(13): import assert from 'node:assert';\nassert.deepEqual(a, null); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(a, null);

`;

exports[`no-incorrect-deep-equal > invalid(13): import assert from 'node:assert';\nassert.deepEqual(a, null); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(a, null);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(a, null);

`;

exports[`no-incorrect-deep-equal > invalid(14): import assert from 'node:assert';\nassert.deepEqual(a, undefined); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(a, undefined);

`;

exports[`no-incorrect-deep-equal > invalid(14): import assert from 'node:assert';\nassert.deepEqual(a, undefined); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(a, undefined);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(a, undefined);

`;

exports[`no-incorrect-deep-equal > invalid(15): import assert from 'node:assert';\nassert.deepEqual(a, \`hello\`); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(a, \`hello\`);

`;

exports[`no-incorrect-deep-equal > invalid(15): import assert from 'node:assert';\nassert.deepEqual(a, \`hello\`); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(a, \`hello\`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(a, \`hello\`);

`;

exports[`no-incorrect-deep-equal > invalid(16): import assert from 'node:assert';\nassert.deepEqual(\`hello\`, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(\`hello\`, b);

`;

exports[`no-incorrect-deep-equal > invalid(16): import assert from 'node:assert';\nassert.deepEqual(\`hello\`, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(\`hello\`, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(\`hello\`, b);

`;

exports[`no-incorrect-deep-equal > invalid(17): import assert from 'node:assert';\nassert.deepEqual(a, \`hello \${name}\`); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(a, \`hello \${name}\`);

`;

exports[`no-incorrect-deep-equal > invalid(17): import assert from 'node:assert';\nassert.deepEqual(a, \`hello \${name}\`); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(a, \`hello \${name}\`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(a, \`hello \${name}\`);

`;

exports[`no-incorrect-deep-equal > invalid(18): import assert from 'node:assert';\nassert.deepEqual(void 0, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(void 0, b);

`;

exports[`no-incorrect-deep-equal > invalid(18): import assert from 'node:assert';\nassert.deepEqual(void 0, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(void 0, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(void 0, b);

`;

exports[`no-incorrect-deep-equal > invalid(19): import assert from 'node:assert';\nassert.deepStrictEqual(a, 1); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepStrictEqual(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(19): import assert from 'node:assert';\nassert.deepStrictEqual(a, 1); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepStrictEqual(a, 1);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepStrictEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(2): import assert from 'node:assert';\nassert.deepEqual(\"str\", b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual("str", b);

`;

exports[`no-incorrect-deep-equal > invalid(2): import assert from 'node:assert';\nassert.deepEqual(\"str\", b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual("str", b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal("str", b);

`;

exports[`no-incorrect-deep-equal > invalid(20): import assert from 'node:assert';\nassert.deepStrictEqual(1, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepStrictEqual(1, b);

`;

exports[`no-incorrect-deep-equal > invalid(20): import assert from 'node:assert';\nassert.deepStrictEqual(1, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepStrictEqual(1, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepStrictEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(1, b);

`;

exports[`no-incorrect-deep-equal > invalid(21): import assert from 'node:assert';\nassert.notDeepEqual(a, 1); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notDeepEqual(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(21): import assert from 'node:assert';\nassert.notDeepEqual(a, 1); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notDeepEqual(a, 1);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`notDeepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.notEqual(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(22): import assert from 'node:assert';\nassert.notDeepEqual(1, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notDeepEqual(1, b);

`;

exports[`no-incorrect-deep-equal > invalid(22): import assert from 'node:assert';\nassert.notDeepEqual(1, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notDeepEqual(1, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`notDeepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.notEqual(1, b);

`;

exports[`no-incorrect-deep-equal > invalid(23): import assert from 'node:assert';\nassert.notDeepStrictEqual(a, 1); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notDeepStrictEqual(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(23): import assert from 'node:assert';\nassert.notDeepStrictEqual(a, 1); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notDeepStrictEqual(a, 1);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`notDeepStrictEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.notStrictEqual(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(24): import assert from 'node:assert';\nassert.notDeepStrictEqual(1, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notDeepStrictEqual(1, b);

`;

exports[`no-incorrect-deep-equal > invalid(24): import assert from 'node:assert';\nassert.notDeepStrictEqual(1, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notDeepStrictEqual(1, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`notDeepStrictEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.notStrictEqual(1, b);

`;

exports[`no-incorrect-deep-equal > invalid(25): import assert from 'node:assert/strict';\nassert.deepEqual(a, 1); 1`] = `

  1 | import assert from 'node:assert/strict';
  2 | assert.deepEqual(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(25): import assert from 'node:assert/strict';\nassert.deepEqual(a, 1); 2`] = `

Message:
  1 | import assert from 'node:assert/strict';
> 2 | assert.deepEqual(a, 1);
    | ^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert/strict';
  2 | assert.equal(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(26): import assert from 'node:assert/strict';\nassert.deepStrictEqual(a, 1); 1`] = `

  1 | import assert from 'node:assert/strict';
  2 | assert.deepStrictEqual(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(26): import assert from 'node:assert/strict';\nassert.deepStrictEqual(a, 1); 2`] = `

Message:
  1 | import assert from 'node:assert/strict';
> 2 | assert.deepStrictEqual(a, 1);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepStrictEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert/strict';
  2 | assert.strictEqual(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(27): import test from 'node:test';\ntest('t', t => { t.assert.deepEqual(a, 1); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.deepEqual(a, 1); });

`;

exports[`no-incorrect-deep-equal > invalid(27): import test from 'node:test';\ntest('t', t => { t.assert.deepEqual(a, 1); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.deepEqual(a, 1); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.equal(a, 1); });

`;

exports[`no-incorrect-deep-equal > invalid(28): import test from 'node:test';\ntest('t', t => { t.assert.deepStrictEqual(1, b); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.deepStrictEqual(1, b); });

`;

exports[`no-incorrect-deep-equal > invalid(28): import test from 'node:test';\ntest('t', t => { t.assert.deepStrictEqual(1, b); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.deepStrictEqual(1, b); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepStrictEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.strictEqual(1, b); });

`;

exports[`no-incorrect-deep-equal > invalid(29): import test from 'node:test';\ntest('t', t => { t.assert.notDeepEqual(a, \"str\"); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.notDeepEqual(a, "str"); });

`;

exports[`no-incorrect-deep-equal > invalid(29): import test from 'node:test';\ntest('t', t => { t.assert.notDeepEqual(a, \"str\"); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.notDeepEqual(a, "str"); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`notDeepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.notEqual(a, "str"); });

`;

exports[`no-incorrect-deep-equal > invalid(3): import assert from 'node:assert';\nassert.deepEqual(true, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(true, b);

`;

exports[`no-incorrect-deep-equal > invalid(3): import assert from 'node:assert';\nassert.deepEqual(true, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(true, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(true, b);

`;

exports[`no-incorrect-deep-equal > invalid(30): import test from 'node:test';\ntest('t', t => { t.assert.notDeepStrictEqual(null, b); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.notDeepStrictEqual(null, b); });

`;

exports[`no-incorrect-deep-equal > invalid(30): import test from 'node:test';\ntest('t', t => { t.assert.notDeepStrictEqual(null, b); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.notDeepStrictEqual(null, b); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`notDeepStrictEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.notStrictEqual(null, b); });

`;

exports[`no-incorrect-deep-equal > invalid(31): import {deepEqual} from 'node:assert';\ndeepEqual(a, 1); 1`] = `

  1 | import {deepEqual} from 'node:assert';
  2 | deepEqual(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(31): import {deepEqual} from 'node:assert';\ndeepEqual(a, 1); 2`] = `

Message:
  1 | import {deepEqual} from 'node:assert';
> 2 | deepEqual(a, 1);
    | ^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

`;

exports[`no-incorrect-deep-equal > invalid(32): import {deepEqual} from 'node:assert';\ndeepEqual(1, b); 1`] = `

  1 | import {deepEqual} from 'node:assert';
  2 | deepEqual(1, b);

`;

exports[`no-incorrect-deep-equal > invalid(32): import {deepEqual} from 'node:assert';\ndeepEqual(1, b); 2`] = `

Message:
  1 | import {deepEqual} from 'node:assert';
> 2 | deepEqual(1, b);
    | ^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

`;

exports[`no-incorrect-deep-equal > invalid(33): import {deepStrictEqual} from 'node:assert';\ndeepStrictEqual(a, \"str\"); 1`] = `

  1 | import {deepStrictEqual} from 'node:assert';
  2 | deepStrictEqual(a, "str");

`;

exports[`no-incorrect-deep-equal > invalid(33): import {deepStrictEqual} from 'node:assert';\ndeepStrictEqual(a, \"str\"); 2`] = `

Message:
  1 | import {deepStrictEqual} from 'node:assert';
> 2 | deepStrictEqual(a, "str");
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepStrictEqual\` with a primitive. Use the non-deep equality equivalent instead.

`;

exports[`no-incorrect-deep-equal > invalid(34): import {notDeepEqual} from 'node:assert';\nnotDeepEqual(a, null); 1`] = `

  1 | import {notDeepEqual} from 'node:assert';
  2 | notDeepEqual(a, null);

`;

exports[`no-incorrect-deep-equal > invalid(34): import {notDeepEqual} from 'node:assert';\nnotDeepEqual(a, null); 2`] = `

Message:
  1 | import {notDeepEqual} from 'node:assert';
> 2 | notDeepEqual(a, null);
    | ^^^^^^^^^^^^^^^^^^^^^ Avoid using \`notDeepEqual\` with a primitive. Use the non-deep equality equivalent instead.

`;

exports[`no-incorrect-deep-equal > invalid(35): import {notDeepStrictEqual} from 'node:assert';\nnotDeepStrictEqual(a, true); 1`] = `

  1 | import {notDeepStrictEqual} from 'node:assert';
  2 | notDeepStrictEqual(a, true);

`;

exports[`no-incorrect-deep-equal > invalid(35): import {notDeepStrictEqual} from 'node:assert';\nnotDeepStrictEqual(a, true); 2`] = `

Message:
  1 | import {notDeepStrictEqual} from 'node:assert';
> 2 | notDeepStrictEqual(a, true);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`notDeepStrictEqual\` with a primitive. Use the non-deep equality equivalent instead.

`;

exports[`no-incorrect-deep-equal > invalid(36): import {deepEqual as de} from 'node:assert';\nde(a, 1); 1`] = `

  1 | import {deepEqual as de} from 'node:assert';
  2 | de(a, 1);

`;

exports[`no-incorrect-deep-equal > invalid(36): import {deepEqual as de} from 'node:assert';\nde(a, 1); 2`] = `

Message:
  1 | import {deepEqual as de} from 'node:assert';
> 2 | de(a, 1);
    | ^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

`;

exports[`no-incorrect-deep-equal > invalid(37): import assert from 'node:assert';\nassert.deepEqual(a, 1, \"message\"); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(a, 1, "message");

`;

exports[`no-incorrect-deep-equal > invalid(37): import assert from 'node:assert';\nassert.deepEqual(a, 1, \"message\"); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(a, 1, "message");
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(a, 1, "message");

`;

exports[`no-incorrect-deep-equal > invalid(38): import assert from 'node:assert';\nassert.deepEqual(a as string, 1); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(a as string, 1);

`;

exports[`no-incorrect-deep-equal > invalid(38): import assert from 'node:assert';\nassert.deepEqual(a as string, 1); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(a as string, 1);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(a as string, 1);

`;

exports[`no-incorrect-deep-equal > invalid(39): import assert from 'node:assert';\nassert.deepEqual(a, 1 as number); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(a, 1 as number);

`;

exports[`no-incorrect-deep-equal > invalid(39): import assert from 'node:assert';\nassert.deepEqual(a, 1 as number); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(a, 1 as number);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(a, 1 as number);

`;

exports[`no-incorrect-deep-equal > invalid(4): import assert from 'node:assert';\nassert.deepEqual(null, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(null, b);

`;

exports[`no-incorrect-deep-equal > invalid(4): import assert from 'node:assert';\nassert.deepEqual(null, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(null, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(null, b);

`;

exports[`no-incorrect-deep-equal > invalid(40): import assert from 'node:assert';\nassert.deepStrictEqual(a, \"x\" satisfies string); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepStrictEqual(a, "x" satisfies string);

`;

exports[`no-incorrect-deep-equal > invalid(40): import assert from 'node:assert';\nassert.deepStrictEqual(a, \"x\" satisfies string); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepStrictEqual(a, "x" satisfies string);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepStrictEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(a, "x" satisfies string);

`;

exports[`no-incorrect-deep-equal > invalid(5): import assert from 'node:assert';\nassert.deepEqual(undefined, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(undefined, b);

`;

exports[`no-incorrect-deep-equal > invalid(5): import assert from 'node:assert';\nassert.deepEqual(undefined, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(undefined, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(undefined, b);

`;

exports[`no-incorrect-deep-equal > invalid(6): import assert from 'node:assert';\nassert.deepEqual(NaN, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(NaN, b);

`;

exports[`no-incorrect-deep-equal > invalid(6): import assert from 'node:assert';\nassert.deepEqual(NaN, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(NaN, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(NaN, b);

`;

exports[`no-incorrect-deep-equal > invalid(7): import assert from 'node:assert';\nassert.deepEqual(Infinity, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(Infinity, b);

`;

exports[`no-incorrect-deep-equal > invalid(7): import assert from 'node:assert';\nassert.deepEqual(Infinity, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(Infinity, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(Infinity, b);

`;

exports[`no-incorrect-deep-equal > invalid(8): import assert from 'node:assert';\nassert.deepEqual(-1, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(-1, b);

`;

exports[`no-incorrect-deep-equal > invalid(8): import assert from 'node:assert';\nassert.deepEqual(-1, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(-1, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(-1, b);

`;

exports[`no-incorrect-deep-equal > invalid(9): import assert from 'node:assert';\nassert.deepEqual(-Infinity, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(-Infinity, b);

`;

exports[`no-incorrect-deep-equal > invalid(9): import assert from 'node:assert';\nassert.deepEqual(-Infinity, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(-Infinity, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid using \`deepEqual\` with a primitive. Use the non-deep equality equivalent instead.

Output:
  1 | import assert from 'node:assert';
  2 | assert.equal(-Infinity, b);

`;
